# ai-gateway

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
app/: config.py  main.py  time_utils.py
app/auth/: middleware.py  tenant.py
app/db/: database.py  models.py
app/keypool/: health.py  pool.py
app/logging/: access.py  usage.py
app/models/: request.py  response.py
app/providers/: anthropic.py  base.py  deepseek.py  openai.py  qwen.py  wenxin.py  zhipu.py
app/ratelimit/: limiter.py  quota.py
app/router/: matcher.py  rules.py
app/security/: crypto.py
app/static/: admin.html  app.js  auth.js  login.html  style.css
config/: gateway.example.yaml
docs/: DEPLOYMENT.md  ZH_CN.md
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_db.py  test_integration.py  test_keypool.py  test_logging.py  test_models.py  test_providers.py  test_ratelimit.py  test_router.py  test_user_api_key_access.py
