[project]
name = "ai-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",  # for TestClient
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
ai-gateway = "run:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
